Downgrade fetch-build-validation-data to Java 1.8